# vultrapi-rs

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  build.sh
src/: lib.rs  macros.rs  vultr_mgr.rs
src/request/: mod.rs  vultr.rs
src/request/builder/: account.rs  application.rs  auth.rs  backup.rs  mod.rs  operating_system.rs  plan.rs  region.rs  request.rs  schedule.rs  server.rs  snapshot.rs
src/response/: account.rs  application.rs  auth.rs  backup.rs  header.rs  mod.rs  named_response.rs  operating_system.rs  plan.rs  region.rs  schedule.rs  server.rs  snapshot.rs
