[package]
name = "vultrapi"
version = "0.1.0"
authors = ["Jose A. Delgado <jdelgado@galgus.net>"]
description = "A wrapper library for the Vultr API v1"
license = "MIT"
repository = "https://github.com/jdelgadoalfonso/vultrapi-rs.git"
documentation = "http://jdelgadoalfonso.github.io/vultrapi-rs"
readme = "README.md"
keywords = ["vultr", "lib", "api"]

[dependencies]
error-chain = "0.11.0"
clap = "2.31.2"
clippy = { version = "0.0.206", optional = true }
hyper = "0.11.27"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
serde = "1.0.66"
serde_codegen = "0.9.0"
serde_derive = "1.0.66"
serde_json = "1.0.20"
serde_urlencoded = "0.5.2"

[features]
default = ["nightly"]
lints = ["nightly", "clippy"]
nightly = []
debug = []
unstable = ["nightly", "lints"]
