[package]
name = "vultrapi"
version = "0.1.0"
authors = ["Jose A. Delgado <jdelgado@galgus.net>"]
description = "A wrapper library for the Vultr API v1"
license = "MIT"
repository = "https://github.com/jdelgadoalfonso/vultrapi-rs.git"
documentation = "http://jdelgadoalfonso.github.io/vultrapi-rs"
readme = "README.md"
keywords = ["vultr", "lib", "api"]

[dependencies]
clap = "2.33.0"
clippy = { version = "0.0.302", optional = true }
failure = "0.1.5"
hyper = "0.12.33"
reqwest = { version = "0.9.20", features = [ "default-tls-vendored" ] }
serde = "1.0"
serde_codegen = "0.9.0"
serde_derive = "1.0"
serde_json = "1.0.40"
serde_urlencoded = "0.5.5"

[features]
default = ["nightly"]
lints = ["nightly", "clippy"]
nightly = []
debug = []
unstable = ["nightly", "lints"]

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
overflow-checks  = false
panic            = "abort"
