[package]
name = "vultrapi"
version = "0.2.0"
authors = ["Jose A. Delgado <jdelgado@galgus.net>"]
description = "A wrapper library for the Vultr API v1"
license = "MIT"
repository = "https://github.com/jdelgadoalfonso/vultrapi-rs.git"
documentation = "http://jdelgadoalfonso.github.io/vultrapi-rs"
readme = "README.md"
keywords = ["vultr", "lib", "api"]

[dependencies]
async-trait = "0.1"
clap = "2.33"
clippy = { version = "0.0.302", optional = true }
failure = "0.1"
hyper = "0.13"
reqwest = { version = "0.10", features = ["json", "cookies", "native-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "0.2", features = ["full"] }

[features]
default = ["nightly"]
lints = ["nightly", "clippy"]
nightly = []
debug = []
unstable = ["nightly", "lints"]

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1
overflow-checks  = true
panic            = "unwind"
incremental      = true

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
overflow-checks  = false
panic            = "abort"
incremental      = false

[profile.dev.build-override]
opt-level        = 0
debug            = true
debug-assertions = true
codegen-units    = 1
overflow-checks  = true
incremental      = true

[profile.release.build-override]
opt-level        = 3
debug            = false
debug-assertions = false
codegen-units    = 1
overflow-checks  = false
incremental      = false
